6-Activity/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: microservice
  name: microservice
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: microservice
  type: NodePort
status:
  loadBalancer: {}
