6-Activity/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice
spec:
  ingressClassName: nginx
  rules:
    - host: nilesh.cell.codesnippets.io
      http:
        paths:
          - backend:
              service:
                name: microservice
                port:
                  number: 80
            path: /
            pathType: Prefix

  # This section is only required if TLS is to be enabled for the Ingress
  # tls:
  #     - hosts:
  #         - www.example.com
  #       secretName: example-tls
